--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
         <input type="text" name="symmetry" placeholder="Symmetry in Cell" required="required"/><br>
         <input type="text" name="fractal dimension" placeholder="Fractal Dimension" required="required"/><br>
 
-        <button type="submit" class="btn btn-primary btn-block btn-large">Click to Predict</button>
+        <button type="submit" class="btn btn-primary btn-block btn-large">Click to Predict model</button>
 
     </form>
    <br>
